@@ -481,6 +481,9 @@
 #
 # Remove package files after install?
 # MKBUILDDEPS_REMOVE_AFTER_INSTALL=yes
+#
+# Tool used to gain root privileges to install the deb
+# MKBUILDDEPS_ROOTCMD=''
 
 ##### namecheck
 #
